[build-system]
requires = ["poetry-core>=2.0.0,<3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tradier-market"
version = "0.1.0"
description = "Tradier REST client for market data only (timesales, history, quotes, options chains)"
readme = "README.md"
authors = ["Trade Tools"]
packages = [{ include = "tradier_market" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.27"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
